--- a/package.json
+++ b/package.json
@@ -1,44 +1,8 @@
 {
-  "name": "gatsby-starter-blog",
-  "private": true,
-  "description": "A starter for a blog powered by Gatsby and Markdown",
-  "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
-  },
-  "dependencies": {
-    "gatsby": "^4.24.5",
-    "gatsby-plugin-feed": "^4.24.0",
-    "gatsby-plugin-image": "^2.24.0",
-    "gatsby-plugin-manifest": "^4.24.0",
-    "gatsby-plugin-sharp": "^4.24.0",
-    "gatsby-remark-copy-linked-files": "^5.24.0",
-    "gatsby-remark-images": "^6.24.0",
-    "gatsby-remark-prismjs": "^6.24.0",
-    "gatsby-remark-responsive-iframe": "^5.24.0",
-    "gatsby-remark-smartypants": "^5.24.0",
-    "gatsby-source-filesystem": "^4.24.0",
-    "gatsby-transformer-remark": "^5.24.0",
-    "gatsby-transformer-sharp": "^4.24.0",
-    "prismjs": "^1.29.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "typeface-merriweather": "0.0.72",
-    "typeface-montserrat": "0.0.75"
-  },
-  "devDependencies": {
-    "prettier": "^2.7.1"
-  },
-  "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
-  "keywords": [
-    "gatsby"
-  ],
-  "license": "0BSD",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/gatsbyjs/gatsby-starter-blog.git"
-  },
+  "name": "aswa-gatsby-blog",
+  "version": "1.0.0",
+  "description": "My Personal Blog",
+  "main": "index.js",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
@@ -47,5 +11,33 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/brettbaisley/aswa-gatsby-blog.git"
+  },
+  "author": "Brett Baisley",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/brettbaisley/aswa-gatsby-blog/issues"
+  },
+  "homepage": "https://github.com/brettbaisley/aswa-gatsby-blog#readme",
+  "devDependencies": {
+    "gatsby-cli": "^5.0.0"
+  },
+  "dependencies": {
+    "gatsby": "^5.0.1",
+    "gatsby-plugin-image": "^3.0.0",
+    "gatsby-plugin-sharp": "^5.0.0",
+    "gatsby-remark-copy-linked-files": "^6.0.0",
+    "gatsby-remark-images": "^7.0.0",
+    "gatsby-remark-prismjs": "^7.0.0",
+    "gatsby-remark-responsive-iframe": "^6.0.0",
+    "gatsby-remark-smartypants": "^6.0.0",
+    "gatsby-source-filesystem": "^5.0.0",
+    "gatsby-transformer-remark": "^6.0.0",
+    "gatsby-transformer-sharp": "^5.0.0",
+    "typeface-merriweather": "^1.1.13",
+    "typeface-montserrat": "^1.1.13"
   }
 }
