--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "gatsby-transformer-sharp": "^5.0.0",
     "typeface-merriweather": "^1.1.13",
     "typeface-montserrat": "^1.1.13"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
