--- a/package.json
+++ b/package.json
@@ -23,22 +23,12 @@
   },
   "homepage": "https://github.com/brettbaisley/aswa-gatsby-blog#readme",
   "devDependencies": {
-    "gatsby-cli": "^5.0.0"
+    "gatsby-cli": "^5.3.1"
   },
   "dependencies": {
-    "gatsby": "^5.0.1",
-    "gatsby-plugin-image": "^3.0.0",
-    "gatsby-plugin-sharp": "^5.0.0",
-    "gatsby-remark-copy-linked-files": "^6.0.0",
-    "gatsby-remark-images": "^7.0.0",
-    "gatsby-remark-prismjs": "^7.0.0",
-    "gatsby-remark-responsive-iframe": "^6.0.0",
-    "gatsby-remark-smartypants": "^6.0.0",
-    "gatsby-source-filesystem": "^5.0.0",
-    "gatsby-transformer-remark": "^6.0.0",
-    "gatsby-transformer-sharp": "^5.0.0",
-    "typeface-merriweather": "^1.1.13",
-    "typeface-montserrat": "^1.1.13"
+    "gatsby": "^5.3.3",
+    "gatsby-source-filesystem": "^5.3.1",
+    "gatsby-transformer-remark": "^6.3.2"
   },
   "engines": {
     "node": ">=18.0.0"
